app/assets/stylesheets/components/_youtube-player.scss
.youtube__video-wrapper {
  background-color: govuk-colour('white');
}

.youtube__video-placeholder {
  position: relative;
  padding: 110px 0;
  border: solid 2px govuk-colour("black");
  text-align: center;

  .govuk-body {
    margin: 0;
    color: govuk-colour("black");
  }

  .youtube__bold {
    font-weight: bold;
  }
}

.youtube__video-logo {
  @include govuk-font(19, $weight: bold, $line-height: 1);
  position: absolute;
  top: 0;
  left: 0;
  padding: govuk-spacing(1);
  padding-top: govuk-spacing(2);
  padding-left: govuk-spacing(5);
  padding-right: govuk-spacing(2);
  margin: govuk-spacing(3);
  border: solid 1px govuk-colour("black");
  text-transform: uppercase;

  &:before {
    content: "";
    position: absolute;
    top: 11px;
    left: 8px;
    width: 12px;
    height: 12px;
    background: govuk-colour("red");
    border-radius: 100%;
  }
}

